--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card">
             <img
-              src="assets/grilla-image/campañas-de-salud.png"
+              src="assets/grilla-image/campanas-de-salud.png"
               class="card-img-top"
               alt="Campaña Salud"
             />
